# sioba

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-shell.bat
docker/: run-test.sh  setup-env.sh
docker/nginx/: Dockerfile  ssl.conf
docker/src/: Dockerfile  setup-env.sh
examples/: custom-interface-auto-index-page.py  echo-interface-auto-index-page.py  echo-interface-sessions.py  function-interface-auto-index-page.py  function-interface-sessions.py  shell-interface-auto-index-page.py  socket-interface-auto-index-page.py  ssl-socket-interface-auto-index-page.py
niceterminal/: build-assets.sh  pyproject.toml  pytest.ini
niceterminal/src/: main.py
niceterminal/src/niceterminal/: __init__.py  errors.py  xterm.js  xterm.py
niceterminal/src/niceterminal/interface/: __init__.py  base.py  echo.py  function.py  persistant.py  persistent.py  simple.py  socket.py
niceterminal/src/niceterminal/xterm/: __init__.py  base.py  interface.py
niceterminal_app/: pyproject.toml
niceterminal_app/src/niceterminal_app/app/: controller.py  interfaces.py  ui.py
niceterminal_app/src/niceterminal_app/app/cli/: __init__.py
niceterminal_interface/: README.md  pyproject.toml
niceterminal_interface/src/niceterminal_interface/: base.py  echo.py  errors.py  function.py  socket.py
niceterminal_socket/: README.md  pyproject.toml
niceterminal_socket/src/niceterminal_socket/interface/: __init__.py
niceterminal_subprocess/: README.md  backuppyproject.toml  example.py  pyproject.toml
niceterminal_subprocess/src/niceterminal_subprocess/: __init__.py
niceterminal_subprocess/src/niceterminal_subprocess/interface/: __init__.py
niceterminal_subprocess/src/niceterminal_subprocess/interface/subprocess/: __init__.py  posix.py  windows.py
niceterminal_subprocess/src/niceterminal_subprocess/subprocess/: __init__.py  posix.py  windows.py
sioba/: README.md  pyproject.pdm  pyproject.toml  run-tests.sh
sioba/src/sioba/: __init__.py  base.py  context.py  echo.py  function.py  registry.py  socket.py  structs.py
sioba/src/sioba/buffer/: terminal.py
sioba/src/sioba/interface/: base.py  echo.py  function.py  io.py  socket.py
sioba/tests/: test_10-import.py  test_20-buffers-basic.py  test_21-buffers-line.py  test_22-buffers-pty.py  test_30-interface-config.py  test_30-interface-context.py  test_31-interface-basic.py  test_32-interface-registry.py  test_33-interface-echo.py  test_34-interface-function.py  test_35-interface-socket.py
sioba/tests/utils/: server.py  terminal.py
sioba/tests/utils/certs/expired/: certificate.crt  certificate.csr  private.key
sioba/tests/utils/certs/future/: certificate.crt  certificate.csr  private.key
sioba_app/: pyproject.toml
sioba_app/src/niceterminal_app/app/: controller.py  interfaces.py  ui.py
sioba_app/src/niceterminal_app/app/cli/: __init__.py
sioba_nicegui/: README.md  build-assets.sh  pyproject.pdm  pyproject.toml  run-tests.sh
sioba_nicegui/examples/: custom-interface-auto-index-page.py  echo-interface-auto-index-page.py  echo-interface-sessions.py  function-interface-auto-index-page.py  function-interface-sessions.py  shell-interface-auto-index-page.py  socket-interface-auto-index-page.py
sioba_nicegui/src/sioba_nicegui/xterm/: base.py  interface.py
sioba_serial/: run-tests.sh
sioba_serial/tests/: test_10-import.py  test_20-interface-serial.py
sioba_subprocess/: README.md  backuppyproject.toml  example.py  pyproject.pdm  pyproject.toml  run-tests.sh
sioba_subprocess/src/niceterminal_subprocess/: __init__.py
sioba_subprocess/src/niceterminal_subprocess/interface/subprocess/: posix.py
sioba_subprocess/src/sioba_subprocess/: __init__.py
sioba_subprocess/src/sioba_subprocess/interface/: __init__.py
sioba_subprocess/src/sioba_subprocess/interface/subprocess/: posix.py  windows.py
sioba_subprocess/tests/: test_10-import.py  test_20-interface-subprocess.py
sioba_subprocess/tests/scripts/: error.py
sioba_websocket/: pyproject.toml  run-tests.sh
sioba_websocket/src/sioba_websocket/interface/: __init__.py
sioba_websocket/tests/: test_10-import.py  test_20-interface-websocket.py
src/: main.py
src/components/: xterm.js  xterm.py
src/nicegui_terminal/: xterm copy.js  xterm.js  xterm.py
src/nicegui_terminal/utils/: subprocess.py
src/niceterminal/: xterm.js  xterm.py
src/niceterminal/app/: __init__.py  controller.py  interfaces.py  ui.py
src/niceterminal/cli/: __init__.py
src/niceterminal/interface/: base.py  persistant.py
src/niceterminal/interface/subprocess/: __init__.py  posix.py  windows.py
src/niceterminal/lib/xterm.js/: xterm.js
src/niceterminal/utils/: interface.py  subprocess.py
tests/: test_01_interface.py  test_02_xterm.py
