[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    # Local libraries
    "-e file:///${PROJECT_ROOT}/niceterminal",
    "-e file:///${PROJECT_ROOT}/niceterminal_interface",
    "-e file:///${PROJECT_ROOT}/niceterminal_subprocess",
    "-e file:///${PROJECT_ROOT}/niceterminal_app",

    # Testing dependencies for the development environment
    "pytest>=8.3.4",
    "pytest-selenium>=4.0.2",
    "pytest-asyncio>=0.25.3",
    "selenium>=4.28.1",
]

[project]
name = "src"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
addopts = "--driver Chrome"
asyncio_mode = "auto"
testpaths = [
    "niceterminal/tests"
]
asyncio_default_fixture_loop_scope = "function"

