[project]
name = "sioba-monorepo"        # purely a container; seldom published
version = "0.0.0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["sioba", "sioba_nicegui", "sioba_subprocess"]

# Make all three discoverable to each other while developing
[tool.uv.sources]
sioba            = { workspace = true }
sioba_nicegui    = { workspace = true }
sioba_subprocess = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.5,<1"]
build-backend = "uv_build"

