[project]
name = "niceterminal"
version = "0.1.3"
description = "A library for building terminal applications with NiceGUI and rich terminal features."
authors = [
    {name = "Aki Mimoto", email = "aki@bako.ca"},
]
dependencies = [
    "nicegui>=2.5.0",
    "pyte>=0.8.2",
    "invoke>=2.1.3",
    "pywinpty>=2.0.4; platform_system == 'Windows'",
    "loguru>=0.7.2",
    "rich>=13.9.4",
]
requires-python = ">=3.9"
# readme = "README.md"
license = {text = "MIT-0"}

[metadata]
long_description = "file:README.md"
long_description_content_type = "text/markdown"

[tool.pdm]
distribution = true
build = { includes = ["src/niceterminal"] }

[build-system]
requires = ["pdm-backend>=0.12"]
build-backend = "pdm.backend"

[project.optional-dependencies]
cli = [ "docopt-ng>=0.9.0" ]

[project.scripts]
niceterm = "niceterminal.cli:main [cli]"

[project.urls]
Homepage = "https://github.com/amimoto/niceterminal"
Issues = "https://github.com/amimoto/niceterminal/issues"

[tool.pytest.ini_options]
addopts = "--driver Chrome"
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-selenium>=4.0.2",
    "pytest-asyncio>=0.25.3",
    "selenium>=4.28.1",
]
