[project]
name = "sioba"
version = "0.2.20250324"
description = "A library for building terminal applications with NiceGUI and rich terminal features."
authors = [
    {name = "Aki Mimoto", email = "aki@bako.ca"},
]
dependencies = [
    "nicegui>=2.5.0",
    "pyte>=0.8.2",
    "loguru>=0.7.2",
    "janus>=2.0.0",
]
requires-python = ">=3.9"
# readme = "README.md"
license = {text = "MIT-0"}

[metadata]
long_description = "file:README.md"
long_description_content_type = "text/markdown"

[tool.pdm]
distribution = true
build = { includes = ["src/sioba"] }

[build-system]
requires = ["pdm-backend>=0.12"]
build-backend = "pdm.backend"

[project.scripts]
niceterm = "sioba.cli:main [cli]"

[project.urls]
Homepage = "https://github.com/amimoto/sioba"
Issues = "https://github.com/amimoto/sioba/issues"


