[project]
name = "sioba_app"
version = "0.2.20250324"
description = "A library for building terminal applications with NiceGUI and rich terminal features."
authors = [
    {name = "Aki Mimoto", email = "aki@bako.ca"},
]
dependencies = [
    "sioba>=0.2.20250324",
]
requires-python = ">=3.9"
# readme = "README.md"
license = {text = "MIT-0"}

[metadata]
long_description = "file:README.md"
long_description_content_type = "text/markdown"

[tool.pdm]
distribution = true
build = { includes = ["src/sioba_app"] }

[overrides]
sioba = { path = "../sioba", develop = true }

[build-system]
requires = ["pdm-backend>=0.12"]
build-backend = "pdm.backend"

[project.scripts]
niceterm = "sioba.cli:main [cli]"

[project.urls]
Homepage = "https://github.com/amimoto/sioba"
Issues = "https://github.com/amimoto/sioba/issues"

[tool.pytest.ini_options]
addopts = "--driver Chrome"
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-selenium>=4.0.2",
    "pytest-asyncio>=0.25.3",
    "selenium>=4.28.1",
]
