[project]
name = "niceterminal-interface"
version = "0.2.20250413"
description = "Interface framework to bridge between various interfaces and niceterminal XTerm."
authors = [
    { name = "Aki Mimoto", email = "aki@bako.ca" }
]
dependencies = [
    "nicegui>=2.5.0",
    "niceterminal>=0.2.20250209",
    "loguru>=0.7.2",
]
requires-python = ">=3.9"
license = { text = "MIT-0" }

[metadata]
long_description = "file:README.md"
long_description_content_type = "text/markdown"

[tool.pdm]
distribution = true
build = { includes = ["src/niceterminal_interface"] }

[overrides]
niceterminal = { path = "../niceterminal", develop = true }

[build-system]
requires = ["pdm-backend>=0.12"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/amimoto/niceterminal"
Issues = "https://github.com/amimoto/niceterminal/issues"

[tool.pytest.ini_options]
addopts = "--driver Chrome"
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
