[project]
name = "sioba_subprocess"
version = "0.2.20250323"
description = "Provides shell terminals for sioba, a library for building terminal applications with NiceGUI and rich terminal features."
authors = [
    { name = "Aki Mimoto", email = "aki@bako.ca" }
]
dependencies = [
    "nicegui>=2.5.0",
    "sioba>=0.2.20250209",
    "loguru>=0.7.2",
    "pywinpty>=2.0.4; sys_platform == 'win32'",
]
requires-python = ">=3.9"
license = { text = "MIT-0" }

[metadata]
long_description = "file:README.md"
long_description_content_type = "text/markdown"

[tool.pdm]
distribution = true
build = { includes = ["src/sioba_subprocess"] }

[overrides]
sioba = { path = "../sioba", develop = true }

[build-system]
requires = ["pdm-backend>=0.12"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/amimoto/sioba"
Issues = "https://github.com/amimoto/sioba/issues"

[tool.pytest.ini_options]
addopts = "--driver Chrome"
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-selenium>=4.0.2",
    "pytest-asyncio>=0.25.3",
    "selenium>=4.28.1"
]
windows = [
    "winpty>=0.4.3"
]