[project]
name = "sioba"
version = "0.2.20250413"
description = "Simple IO Backend Abstractions: A lightweight framework for unifying subprocess, socket, serial, and custom I/O backends via extensible interface."
authors = [
    { name = "Aki Mimoto", email = "aki@bako.ca" }
]
dependencies = [
    "nicegui>=2.5.0",
    "loguru>=0.7.2",
]
requires-python = ">=3.9"
license = { text = "MIT-0" }

[metadata]
long_description = "file:README.md"
long_description_content_type = "text/markdown"

[tool.pdm]
distribution = true
build = { includes = ["src/sioba"] }

[overrides]
sioba = { path = "../sioba", develop = true }

[build-system]
requires = ["pdm-backend>=0.12"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/amimoto/sioba"
Issues = "https://github.com/amimoto/sioba/issues"

[tool.pytest.ini_options]
addopts = "--driver Chrome"
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
