[project]
name = "sioba_nicegui"
version = "0.1.20250906"
description = "Sioba Interface to XTerm.js bindings"
requires-python = ">=3.10"
dependencies = [
    "nicegui>=2.23.0",
    "sioba>=0.4.20250906",
]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]


[build-system]
requires = ["uv_build>=0.8.5,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.2.1",
    "sioba_subprocess>=0.4.20250925",
]

# Override the runtime requirement when *inside* the workspace
[tool.uv.sources]
sioba = { workspace = true }
sioba_subprocess = { workspace = true }

