[project]
name = "sioba_subprocess"
version = "0.4.0"
description = "Sioba Subproces IO Interface layer"
requires-python = ">=3.9"
dependencies = [
    "sioba>=0.3.20250806",
    "loguru>=0.7.2",
    "pywinpty>=2.0.4; sys_platform == 'win32'",
]

# Override the runtime requirement when *inside* the workspace
[tool.uv.sources]
sioba = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.5,<1"]
build-backend = "uv_build"

